# gst-plugins-qti-oss

gst-ml-metadata/: ml_meta.c  (+1 more)
gst-plugin-base/: CMakeLists.txt
gst-plugin-base/gst/memory/: CMakeLists.txt  gstionpool.c  gstionpool.h
gst-plugin-base/gst/ml/: CMakeLists.txt  gstmlmeta.c  gstmlmeta.h  gstmlpool.c  gstmlpool.h  ml-frame.c  ml-frame.h  ml-info.c  ml-info.h  ml-type.c  ml-type.h
gst-plugin-base/gst/video/: CMakeLists.txt  c2d-video-converter.c  c2d-video-converter.h  gles-video-converter.cc  gles-video-converter.h  gstimagepool.c  gstimagepool.h
gst-plugin-codec2/: .clang-format  Makefile.am  NOTICE  autogen.sh  configure.ac  meson.build
gst-plugin-codec2/common/: Makefile.am  gstqticodec2bufferpool.c  gstqticodec2bufferpool.h  meson.build
gst-plugin-codec2/vdec/: Makefile.am  gstqticodec2vdec.c  gstqticodec2vdec.h  gstqticodec2vdecbufferpool.c  gstqticodec2vdecbufferpool.h  meson.build
gst-plugin-codec2/venc/: Makefile.am  gstqticodec2venc.c  gstqticodec2venc.h  meson.build
gst-plugin-codec2/wrapper/: Makefile.am  c2ComponentAdapter.cpp  c2ComponentInterfaceAdapter.cpp  c2ComponentStoreAdapter.cpp  codec2wrapper.cpp  codec2wrapper.h  meson.build  wrapper_utils.cpp
gst-plugin-codec2/wrapper/include/: c2ComponentAdapter.h  c2ComponentInterfaceAdapter.h  c2ComponentStoreAdapter.h  codec2wrapper.h  types.h  utils.h  wrapper_utils.h
gst-plugin-cvp-optclflow/: CMakeLists.txt  cvp-optclflow.cc  cvp-optclflow.h  opticalflow.cc  opticalflow.h
gst-plugin-examples/: CMakeLists.txt
gst-plugin-examples/gst-activate-deactivate-streams-runtime/: CMakeLists.txt  main.c
gst-plugin-examples/gst-add-remove-streams-runtime/: CMakeLists.txt  main.c
gst-plugin-examples/gst-appsink/: CMakeLists.txt  main.c
gst-plugin-examples/gst-hotplug-pov-camera-app/: CMakeLists.txt  main.c
gst-plugin-examples/gst-tracking-cam-app/: CMakeLists.txt  tracking_camera.c  tracking_camera.cc
gst-plugin-examples/gst-weston-composition/: CMakeLists.txt  main.c
gst-plugin-hexagon-nn/: CMakeLists.txt
gst-plugin-hexagon-nn/engines/: common_utils.h
gst-plugin-hexagon-nn/engines/deeplabv3/: CMakeLists.txt  deeplabengine.cc  deeplabengine.h
gst-plugin-hexagon-nn/engines/mnetssd/: CMakeLists.txt  mnetssdengine.cc  mnetssdengine.h
gst-plugin-hexagon-nn/gst/: CMakeLists.txt  gsthexagonnn.cc  gsthexagonnn.h
gst-plugin-hexagon-nn/nndriver/: CMakeLists.txt  nndriver.cc  nndriver.h
gst-plugin-metamux/: CMakeLists.txt  metamux.c  metamux.h  metamuxpads.c  metamuxpads.h
gst-plugin-mlaic/: CMakeLists.txt  ml-aic-engine.cc  ml-aic-engine.h  mlaic.c  mlaic.h  mlaicpads.c  mlaicpads.h
gst-plugin-mle/: CMakeLists.txt
gst-plugin-mle/deeplearning_engine/: CMakeLists.txt  common_utils.h  ml_engine_intf.h  snpe_base.cc  snpe_base.h  snpe_complex.cc  snpe_complex.h  snpe_segmentation.cc  snpe_segmentation.h  snpe_single_ssd.cc  snpe_single_ssd.h  tflite_base.cc  tflite_base.h  tflite_posenet.cc  tflite_posenet.h  tflite_segmentation.cc  tflite_segmentation.h
gst-plugin-mle/mle_engine/: CMakeLists.txt  common_utils.h  ml_engine_impl.cc  ml_engine_intf.h  snpe_base.cc  snpe_complex.cc  snpe_complex.h  snpe_detection.cc  snpe_segmentation.cc  snpe_single_ssd.cc  tflite_base.cc  tflite_base.h  tflite_posenet.cc  tflite_posenet.h  tflite_segmentation.cc
gst-plugin-mle/mle_gst_snpe/: CMakeLists.txt  README  mle_snpe.cc  mle_snpe.h  mle_snpe_config.json
gst-plugin-mle/mle_gst_tflite/: CMakeLists.txt  mle_tflite.cc  mle_tflite.h  mle_tflite_config.json
gst-plugin-mle/mle_snpe/: README  mle_snpe.cc  mle_snpe.h  mle_snpe_config.json
gst-plugin-mle/mle_tflite/: CMakeLists.txt  mle_tflite.cc  mle_tflite.h  mle_tflite_config.json
gst-plugin-mlsnpe/: CMakeLists.txt  ml-snpe-engine.cc  ml-snpe-engine.h  mlsnpe.c  mlsnpe.h
gst-plugin-mlvclassification/: CMakeLists.txt  mlvclassification.c  mlvclassification.h
gst-plugin-mlvclassification/modules/: CMakeLists.txt  ml-video-classification-module.h  mobilenet-tflite.c
gst-plugin-mlvconverter/: CMakeLists.txt  mlvconverter.c  mlvconverter.h
gst-plugin-mlvdetection/: CMakeLists.txt  mlvdetection.c  mlvdetection.h
gst-plugin-mlvdetection/modules/: CMakeLists.txt  ml-video-detection-module.h  ssd-mobilenet-dlc.c  ssd-mobilenet-tflite.c  ssd-yolo.cc
gst-plugin-mlvsegmentation/: CMakeLists.txt  mlvsegmentation.c  mlvsegmentation.h
gst-plugin-mlvsegmentation/modules/: CMakeLists.txt  deeplab-argmax-tflite.c  ml-video-segmentation-module.h
gst-plugin-qmmfsrc/: CMakeLists.txt  qmmf_source.c  qmmf_source.cc  qmmf_source.h  qmmf_source_audio_pad.c  qmmf_source_audio_pad.cc  qmmf_source_audio_pad.h  qmmf_source_context.cc  qmmf_source_context.h  qmmf_source_image_pad.c  qmmf_source_image_pad.cc  qmmf_source_image_pad.h  qmmf_source_utils.c  qmmf_source_utils.h  qmmf_source_video_pad.c  qmmf_source_video_pad.cc  qmmf_source_video_pad.h
gst-plugin-qmmfsrc/test/: CMakeLists.txt  gst_pipeline_app.c
gst-plugin-qscreencapsrc/: Makefile.am  NOTICE.txt  configure.ac
gst-plugin-qscreencapsrc/screencap/: Makefile.am  gbm-buffer-backend.xml  gstqscreencapsrc.c  gstqscreencapsrc.h  qscreencaputil.c  qscreencaputil.h  screen-capture.xml
gst-plugin-qvblend/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
gst-plugin-qvblend/c2d/: c2d_blend.cpp  c2d_blend.h
gst-plugin-qvblend/videoblend/: Makefile.am  gstvideoblend.cpp  gstvideoblend.h  gstvideoblendpad.h
gst-plugin-roimux/: CMakeLists.txt  config.h.in  roimux.c  roimux.h
gst-plugin-streamdemux/: CMakeLists.txt  gststreamdemux.c  gststreamdemux.h
gst-plugin-tools/: CMakeLists.txt
gst-plugin-tools/gst-pipeline-app/: CMakeLists.txt  main.c
gst-plugin-tools/gst-rtsp-server/: CMakeLists.txt  main.c
gst-plugin-tools/gst-warmboot-app/: CMakeLists.txt  main.c
gst-plugin-vcomposer/: CMakeLists.txt  videocomposer.c  videocomposer.h  videocomposersinkpad.c  videocomposersinkpad.h  videocomposerutils.c  videocomposerutils.h
gst-umd-daemon/: CMakeLists.txt  main.c  uvc.config
secureappsrc/: Makefile.am  README  configure.ac  crypto.c  crypto.h  secureappsrc.c  secureappsrc2.c
(+143 files in other folders)
